--- a/INSTALL
+++ b/INSTALL
@@ -3,16 +3,9 @@ OpenTransactions
 
  --- Open Transactions is currently built on a Mac OSX 10.6.4 (Snow Leopard)
  
- --- OpenSSL of version at least (Version 0.9.8l) is necessary since the SAMY hash 
+ --- OpenSSL version Version 1.0.0a (at least) is necessary, since the SAMY hash 
      uses WHRLPOOL. (XOR'd with SHA-512.) WHIRLPOOL is a new addition to OpenSSL.
-	 
- --- OTLib itself is only a library.  There are also a client and server which use it
-     as a dylib, and they expect it to be in /usr/local/lib (at least, according to the
-     current xcode project files.)
  
- --- Make sure you link the OTLib library project with libcrypto.a and libssl.a
-     (They should already be in the project file that way.)
-	 
  --- Let me know if there are any problems, since this is new software; this will be a
      living document.
  
@@ -22,13 +15,26 @@ TO BUILD:
 --- In ALL THREE PROJECTS (OTLib, transaction, and testwallet) edit the project file
     and find ALL occurrences of the word REDACTED. In those places, you will need to adjust
     the path to match whatever you are using on your own system.
-
     Come to think of it, you will need to do this with the 2 utility projects as well.
     util/otcreatemint and util/signcontract.  
- 
- ***I redacted my name, so you can easily find it with grep, edit the file, and fix the
-    path.  Once you do this, the projects will be able to find the library and all the
-    headers, etc.  Just search for REDACTED.
+
+    For example:
+
+    cd transaction
+    cd transaction.xcodeproj
+    fgrep -n -R REDACTED *
+
+    Edit the file project.pbxproj with a text editor and fix the path.  Wherever you
+    see REDACTED, just change it so that the path you see reflects what it should be
+    on YOUR system. Once you do this, the projects will be able to find the library
+    and all the headers, etc.  Just search for REDACTED and you will see what to do.
+
+
+--- OTLib expects libcrypto.a and libssl.a. If you open the project, you can see those files
+    are listed in red, because the actual .a files are missing.  (I deleted them before 
+    distributing this code.) So just find the .a files on your system and copy them into the
+    OTLib folder before building.  I'm using OpenSSL 1.0.0a now, so you should have at least
+    that version as well.
 
 --- Open OTLib in XCode.  SHIFT-COMMAND-K  (Make all clean) Then COMMAND-B (BUILD)
 
@@ -36,29 +42,14 @@ TO BUILD:
 
 --- Once the library is built, copy OTLib/build/Debug/libOTLib.dylib to /usr/local/lib
     For good measure, copy it to ./testwallet and ./transaction as well.
+    In fact, copy it to util/signcontract and util/otcreatemint as well.
 
 --- OPEN transaction and testwallet projects in XCode, and build them the same way.
     (SHIFT-COMMAND-K followed by COMMAND-B)
+    You can also build the createmint and signcontract utilities projects in the same way.
 
-
-
-You will have to edit inside the .xcodeproj files for ALL of the projects, 
-if you're using XCode, and search for the word REDACTED.  In that place, 
-make sure you put the correct path for the project to work on your system.  
-You'll see what I mean.
-
-Also, to build in XCode, you may need to make sure the libssl.a and libcrypto.a
-are in your project (not sure if that's essential or if you can just link.)
-
-The link should already be in your project file as -lssl -lcrypto
-
-And you may need to make sure that libOTLib.dylib is in your project folders,
-as well as your /usr/local/lib folder.
 
 Eventually OTLib will be statically linked, not dynamically, but this is just for testing.
-
-If you are building and it says "No file or directory" that means you haven't done
-what I said above about the REDACTED thing.
 
 
 
@@ -109,19 +100,16 @@ I already created your user account. The password is test (always)
 
 **** READ:  docs/CLIENT-COMMANDS.txt  for a list of the Wallet's commands.
 I will soon add that file to a help command inside the wallet.
-
-
-You can create asset accounts, and issue assets, 
+You can create asset accounts, issue new asset types, 
 transfer assets, get inbox, process inbox,
-withdraw cash, deposit cash, etc.
-getcontract, getmint, etc.
-
+withdraw cash, deposit cash, getcontract, getmint.
 You can also create basket currencies and exchange between normal asset accounts
 and basket accounts. (To the server it's just another account type.)
 
 REMEMBER:  If you move some assets, and you don't see the change show up in your 
 account, then you probably just need to type "get" (to get the latest copy of the 
-account after a change has just been made.)
+account after a change has just been made.) Another useful command is 'i' for
+grabbing the inbox of any specific account. Then "get", and see the balances change.
 
 Obviously a nice client will do this automatically.
 
