High-Level Interfaces in Java and C++.
I will work with developers to shape up these
interfaces for their client software.

Signed-off-by: FellowTraveler 
<F3llowTraveler@gmail.com>

--- a/docs/RELEASE-NOTES.txt
+++ b/docs/RELEASE-NOTES.txt
@@ -9,7 +9,7 @@ NOTES on the Version:
 
            High-level C++ Interface
 
-           !Spent Token Database is fully operational!
+           Spent Token Database is fully operational!
 
            Mints and Tokens now support Expiration AND Series. 
 
