Added top-level build option DSP=1, which uses a custom version of OpenSSL, and turns off output logs.
Signed-off-by: FellowTraveler <F3llowTraveler@gmail.com>

--- a/docs/RELEASE-NOTES.txt
+++ b/docs/RELEASE-NOTES.txt
@@ -2,6 +2,8 @@
 NOTES on the Version:
 
 // ---------------------------------------------------------------------
+   0.37 --- Added build option DSP=1, for using custom builds of OpenSSL,
+            and for turning off all the output logs.
 
    0.36 --- Top-level build targets added for API in Python, Ruby, PHP,
             and Perl!  It's now this easy to build the API:
