--- a/docs/RELEASE-NOTES.txt
+++ b/docs/RELEASE-NOTES.txt
@@ -2,6 +2,11 @@
 NOTES on the Version:
 
 // ---------------------------------------------------------------------
+
+   0.38 --- Added Payment Plans, Markets, and Baskets to the API. Also
+            added message buffer access to the API, so you can read all
+            the server replies if you want to (or flush them...)
+
    0.37 --- Added build option DSP=1, for using custom builds of OpenSSL,
             and for turning off all the output logs.
 
